# Pyxelze

./: .gitattributes  .gitignore  CLEANUP.md  CMakeLists.txt  CONTRIBUTING.md  DragHelper.cs  ExtendedListView.cs  ExtractionProgressForm.cs  Form1.cs  IconHelper.cs  LICENSE  LICENSE_AR  LICENSE_DE  LICENSE_ES  LICENSE_FR  LICENSE_IT  LICENSE_JA  LICENSE_KO  LICENSE_PL  LICENSE_PT  LICENSE_RU  LICENSE_TR  LICENSE_ZH  LazyDataObject.cs  ListViewFileSorter.cs  NativeMethods.cs  Program.cs  Pyxelze.csproj  Pyxelze.sln  README.md  README_BUILD.md  RoxRunner.cs  TO-DO.md  ThemeManager.cs  VirtualFile.cs  build.cmd  build_all.cmd  build_and_run.bat  build_installer.cmd  build_production.cmd  (+14 more)
%INSTDIR%/: rox.cmd
.github/workflows/: build-rox.yml  ci.yml  installer-acceptance.yml  macos-builds.yml  publish-v1.2.5.yml  publish.yml  release.yml  sign-windows.yml
Properties/: AssemblyInfo.cs
build-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-debug/pyxelze_autogen/: deps  mocs_compilation.cpp
build-debug/roxify/: roxify_native
build-linux/: pyxelze
build-linux/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-linux/pyxelze_autogen/: deps
build-linux/roxify/: roxify_native
build-macos/: roxify_native
build-win-debug/: .ninja_deps  .ninja_log  build.ninja
build-win-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-win-debug/pyxelze_autogen/: deps
cpp/resources/: resources.qrc
dnd_test/: Program.cs  dnd_test.csproj
docs/: BUILD_WINDOWS.md  BUILD_WORKFLOW.md  CLEANUP.md  CONTRIBUTING.md  INTEGRATION_COMPLETE.md  MODIFICATIONS_SUMMARY.md  README.md  SECURITY.md  TO-DO.md
packaging/debian/: control  postinst  pyxelze.desktop
packaging/windows/: installer.iss  installer_new.iss
publish_final/roxify/: rox.cmd.err.txt
publish_test/roxify/: rox.err.txt
publish_with_native/: BUILDSTAMP.txt  sha256sums.txt
release/: README.md  build_installer.cmd  installer.iss  rox.err.txt
release/roxify/roxify/: package.json
resources/: pyxelze.rc  resources.qrc
resources/icons/: pyxelze.icns
resources/lang/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  zh.json
scripts/: build_appimage.sh  build_deb.sh  build_linux_to_windows.sh  build_macos.sh  build_roxify.js  build_windows.sh  check_binaries.sh  create_dmg_background.py  create_self_signed_pfx.sh  debug_windows.bat  install_innosetup.sh  make_installer.sh  postbuild.js  prepare_build.sh  prepare_fp_submission.sh  publish_release.sh  rebuild_publish.sh  release_windows.bat  sanitize_binaries.sh  signing_cert.pfx  verify_setup.sh  xcopy_exclude.txt
scripts/scripts-windows/: build_all.cmd  build_installer.cmd  make_release.cmd  rox_installed.cmd  run_release.bat
scripts/scripts-windows/tools/installer/: installer.iss
src/: AboutForm.cs  AntivirusHelper.cs  ContextMenuRegistration.cs  DragHelper.cs  ExtendedListView.cs  ExtractionProgressForm.cs  ExtractionService.cs  FileAssociationWatcher.cs  FileIconManager.cs  Form1.cs  IconHelper.cs  LazyDataObject.cs  Logger.cs  MainForm.cs  NativeMethods.cs  PassphraseManager.cs  PassphrasePrompt.cs  ProcessHelper.cs  ProcessProgressForm.cs  Program.cs  RoxRunner.cs  ThemeManager.cs  UpdateChecker.cs  VirtualFile.cs  main.cpp
src/Archive/: ArchiveParser.cs  CompressionService.cs  ExtractionService.cs  RoxRunner.cs
src/Core/: AppConstants.cs  MainForm.cs  Program.cs
src/DragDrop/: DragHelper.cs
src/Helpers/: GlobalSuppressions.cs  SizeFormatter.cs  TempHelper.cs  UpdateChecker.cs
src/Localization/: Localization.cs
src/Security/: AntivirusHelper.cs  PassphraseManager.cs  PassphrasePrompt.cs
src/System/: ContextMenuRegistration.cs  FileAssociationWatcher.cs  FileIconManager.cs  IconHelper.cs  ProcessHelper.cs
src/UI/: AboutForm.cs  ArchiveInfoForm.cs  ErrorDialog.cs  ExtendedListView.cs  ExtractionProgressForm.cs  ListViewFileSorter.cs  ListViewRendering.cs  ProcessProgressForm.cs  ThemeManager.cs  ToolbarIcons.cs
src/archive/: ArchiveParser.cpp  ArchiveParser.h  CompressionService.cpp  CompressionService.h  ExtractionService.cpp  ExtractionService.h
src/core/: AppConstants.h  Logger.cpp  Logger.h  ProcessHelper.cpp  ProcessHelper.h  RoxRunner.cpp  RoxRunner.h  VirtualFile.h
src/helpers/: SizeFormatter.cpp  SizeFormatter.h  TempHelper.cpp  TempHelper.h  UpdateChecker.cpp  UpdateChecker.h
src/localization/: Localization.cpp  Localization.h
src/platform/: PlatformService.cpp  PlatformService.h
src/security/: LicenseAlgorithm.cpp  LicenseAlgorithm.h  LicenseManager.cpp  LicenseManager.h  PassphraseManager.cpp  PassphraseManager.h
src/ui/: AboutDialog.cpp  ArchiveInfoDialog.cpp  ArchiveInfoDialog.h  ErrorDialog.cpp  ErrorDialog.h  IconProvider.cpp  IconProvider.h  MainWindow.cpp  MainWindow.h  PassphraseDialog.cpp  PassphraseDialog.h  ProgressDialog.cpp  ProgressDialog.h  ThemeManager.cpp  ThemeManager.h
tools/archive/roxify/: build.cmd  index.js  node.err.txt  test_cli_run.mjs  test_import.mjs
tools/archive/roxify/scripts/: postbuild.js
tools/archive/roxify/test/: install_acceptance_test.js
tools/installer/: build_installer.cmd  installer.iss
tools/oldPyx/: oldPyxInstaller.iss
tools/roxify/: build.cmd  index.js  install-rox.cmd  package.json  rox.cmd  rox_help.txt  test_cli_run.mjs  test_import.mjs
tools/roxify/scripts/: fix-cli-progress-presets.js  npm-install.js  postbuild.js
tools/roxify/test/: install_acceptance_test.js  integration.js  wrapper_spawn_test.js
